# axum-sea_orm-boilerplate

./: .gitignore  Cargo.toml
migration/src/: lib.rs  m20241125_000001_create_users_table.rs  m20241127_000001_create_user_profiles_table.rs
src/: main.rs
src/application/services/: user_service.rs
src/core/: mod.rs
src/core/models/: user_model.rs
src/core/use_cases/: mod.rs  user_get_all_use_case.rs  user_register_use_case.rs
src/db/: mod.rs
src/extensions/: auth.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  user_profiles.rs  users.rs
src/infrastructure/repositories/: user_repository.rs
src/interface/handlers/: user_handler.rs
src/interface/routes/: mod.rs  user_route.rs
src/repositories/: user_repository.rs
