[package]
name = "axum-api-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full"]}
sea-orm = {version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
dotenvy = "0.15.7"
