[package]
name = "axum-api-boilerplate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-alpha.1"
tokio = {version = "1.42.0", features = ["full"]}
sea-orm = {version = "1.1.2", features = ["sqlx-postgres", "macros", "runtime-tokio-native-tls"]}
dotenvy = "0.15.7"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
hyper = "1.5.1"
tower = "0.5.2"
log = "0.4.22"

#axum = "0.7.9"
#chrono = {version = "0.4.38", features = ["serde"]}
#serde = {version = "1.0.215", features = ["derive"]}
#serde_json = "1.0.133"
#tokio = {version = "1.41.1", features = ["full"]}
#tower-http = {version = "0.6.2", features = ["cors"]}
#sea-orm = {version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
#dotenvy = "0.15.7"
#async-trait = "0.1.83"
